# houdini-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.beads/: interactions.jsonl  issues.jsonl  last-touched
.github/workflows/: ci.yml  publish-ghcr.yml  release.yml
.letta/: settings.json  settings.local.json
.serena/: project.yml
.vibesync-cache/: ast-cache.json
docs/: README.md  hosted-service-planning.md
docs/implementation/: error-handling-patterns.md  error-introspection.md  examples-docs.md  geometry-summary.md  network-introspection.md  node-wiring.md  overview.md  parameter-schema.md
docs/reference/: error-introspection-ref.md  examples-ref.md  geometry-summary-ref.md  quick-reference.md
examples/: README.md  augment_existing_scene.py  build_from_scratch.py  error_handling.py  parameter_workflow.py
houdini_mcp/: __init__.py  __main__.py  connection.py  server.py  tools.py  tools_legacy.py
houdini_mcp/tools/: __init__.py  _common.py  cache.py  code.py  errors.py  geometry.py  help.py  hscript.py  layout.py  materials.py  nodes.py  pane_screenshot.py  parameters.py  rendering.py  scene.py  summarization.py  wiring.py
houdini_plugin/: houdini_mcp.json
houdini_plugin/python/houdini_mcp_plugin/: __init__.py  connection.py  remote.py  server.py
houdini_plugin/toolbar/: houdini_mcp.shelf
tests/: __init__.py  conftest.py  test_connection.py  test_execute_code.py  test_geometry.py  test_node_errors.py  test_parameter_schema.py  test_parameter_schema_integration.py  test_render.py  test_summarization.py  test_tools.py  test_wiring_integration.py
tests/integration/: test_live_houdini.py  test_workflow_examples.py
