[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "houdini-mcp"
version = "0.3.0"
description = "MCP server for SideFX Houdini integration via rpyc"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["houdini", "mcp", "model-context-protocol", "3d", "vfx", "procedural"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.1.0",
    # rpyc MUST be 5.x - version 6.x has protocol incompatibility with Houdini's hrpyc
    "rpyc>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0",
    # For get_houdini_help web scraping
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/oculairmedia/houdini-mcp"
Repository = "https://github.com/oculairmedia/houdini-mcp"
Issues = "https://github.com/oculairmedia/houdini-mcp/issues"

[project.scripts]
houdini-mcp = "houdini_mcp.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["houdini_mcp*"]

# Ruff configuration (replaces black, isort, flake8)
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in interfaces)
]

[tool.ruff.lint.isort]
known-first-party = ["houdini_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: requires a live Houdini hrpyc server",
]

# Coverage configuration
[tool.coverage.run]
source = ["houdini_mcp"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/server.py",  # FastMCP registration - tested via integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = ["tests/", "build/"]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # assert statements are fine in tests
